improved styling of inline code

--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -12,4 +12,16 @@
         <link href="/favicon.png" rel="icon" />
         <link href="/feed.xml" type="application/rss+xml" rel="alternate" title="RSS Feed" />
         <link href="/feed.links.xml" type="application/rss+xml" rel="alternate" title="RSS Feed (links only)" />
+
+        <!-- Flattr Support -->
+        <script type="text/javascript">
+          (function() {
+            var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto&button=compact&uid=laerador&category=text&popout=0';
+            t.parentNode.insertBefore(s, t);
+          })();
+        </script>
+
     </head>
