--- a/_src/assets/css/syntax.css
+++ b/_src/assets/css/syntax.css
@@ -1,78 +1,226 @@
-code {background-color:#222424;color:#93a1a1;border:1px solid black;padding: 2px 4px;line-height:+2;font-size:11pt;}
-pre code {
-    border: none;
+code
+{
+	background-color:#222424;
+	border:1px solid #000;
+	color:#93a1a1;
+	font-size:11pt;
+	padding:2px 4px
 }
-pre {
-    padding: 10px 10px;border: 1px solid black;
-    background-color:#222424;
+
+pre code
+{
+	border:none
 }
-.highlight{background-color:#222424;color:#93a1a1;width:100%;}
-.highlight pre{padding: 10px 10px;border: 1px solid black;}
-.highlight .c{color:#586e75 !important;font-style:italic !important}
-.highlight .cm{color:#586e75 !important;font-style:italic !important}
-.highlight .cp{color:#586e75 !important;font-style:italic !important}
-.highlight .c1{color:#586e75 !important;font-style:italic !important}
-.highlight .cs{color:#586e75 !important;font-weight:bold !important;font-style:italic !important}
-.highlight .err{color:#dc322f !important;background:none !important}
-.highlight .k{color:#cb4b16 !important}
-.highlight .o{color:#93a1a1 !important;font-weight:bold !important}
-.highlight .p{color:#93a1a1 !important}
-.highlight .ow{color:#2aa198 !important;font-weight:bold !important}
-.highlight .gd{color:#93a1a1 !important;background-color:#372c34 !important;display:inline-block}
-.highlight .gd .x{color:#93a1a1 !important;background-color:#4d2d33 !important;display:inline-block}
-.highlight .ge{color:#93a1a1 !important;font-style:italic !important}
-.highlight .gr{color:#aa0000}
-.highlight .gh{color:#586e75 !important}
-.highlight .gi{color:#93a1a1 !important;background-color:#1a412b !important;display:inline-block}
-.highlight .gi .x{color:#93a1a1 !important;background-color:#355720 !important;display:inline-block}
-.highlight .go{color:#888888}
-.highlight .gp{color:#555555}
-.highlight .gs{color:#93a1a1 !important;font-weight:bold !important}
-.highlight .gu{color:#6c71c4 !important}
-.highlight .gt{color:#aa0000}
-.highlight .kc{color:#859900 !important;font-weight:bold !important}
-.highlight .kd{color:#268bd2 !important}
-.highlight .kp{color:#cb4b16 !important;font-weight:bold !important}
-.highlight .kr{color:#d33682 !important;font-weight:bold !important}
-.highlight .kt{color:#2aa198 !important}
-.highlight .n{color:#268bd2 !important}
-.highlight .na{color:#268bd2 !important}
-.highlight .nb{color:#859900 !important}
-.highlight .nc{color:#d33682 !important}
-.highlight .no{color:#b58900 !important}
-.highlight .ni{color:#800080}
-.highlight .nl{color:#859900 !important}
-.highlight .ne{color:#268bd2 !important;font-weight:bold !important}
-.highlight .nf{color:#268bd2 !important;font-weight:bold !important}
-.highlight .nn{color:#b58900 !important}
-.highlight .nt{color:#268bd2 !important;font-weight:bold !important}
-.highlight .nx{color:#b58900 !important}
-.highlight .bp{color:#999999}
-.highlight .vc{color:#008080}
-.highlight .vg{color:#268bd2 !important}
-.highlight .vi{color:#268bd2 !important}
-.highlight .nv{color:#268bd2 !important}
-.highlight .w{color:#bbbbbb}
-.highlight .mf{color:#2aa198 !important}
-.highlight .m{color:#2aa198 !important}
-.highlight .mh{color:#2aa198 !important}
-.highlight .mi{color:#2aa198 !important}
-.highlight .mo{color:#009999}
-.highlight .s{color:#2aa198 !important}
-.highlight .sb{color:#d14}
-.highlight .sc{color:#d14}
-.highlight .sd{color:#2aa198 !important}
-.highlight .s2{color:#2aa198 !important}
-.highlight .se{color:#dc322f !important}
-.highlight .sh{color:#d14}
-.highlight .si{color:#268bd2 !important}
-.highlight .sx{color:#d14}
-.highlight .sr{color:#2aa198 !important}
-.highlight .s1{color:#2aa198 !important}
-.highlight .ss{color:#990073}
-.highlight .il{color:#009999}
-.highlight div .gd,
-.highlight div .gd .x,
-.highlight div .gi,
-.highlight div .gi .x{display:inline-block;width:100%}
-.highlight .lineno{width:20px}
+
+pre
+{
+	background-color:#222424;
+	border:1px solid #000
+}
+
+.highlight
+{
+	background-color:#222424;
+	color:#93a1a1;
+	width:100%
+}
+
+.highlight .cs
+{
+	color:#586e75!important;
+	font-style:italic!important;
+	font-weight:700!important
+}
+
+.highlight .err
+{
+	background:none!important;
+	color:#dc322f!important
+}
+
+.highlight .k
+{
+	color:#cb4b16!important
+}
+
+.highlight .p
+{
+	color:#93a1a1!important
+}
+
+.highlight .ow
+{
+	color:#2aa198!important;
+	font-weight:700!important
+}
+
+.highlight .gd
+{
+	background-color:#372c34!important;
+	color:#93a1a1!important;
+	display:inline-block
+}
+
+.highlight .gd .x
+{
+	background-color:#4d2d33!important;
+	color:#93a1a1!important;
+	display:inline-block
+}
+
+.highlight .ge
+{
+	color:#93a1a1!important;
+	font-style:italic!important
+}
+
+.highlight .gh
+{
+	color:#586e75!important
+}
+
+.highlight .gi
+{
+	background-color:#1a412b!important;
+	color:#93a1a1!important;
+	display:inline-block
+}
+
+.highlight .gi .x
+{
+	background-color:#355720!important;
+	color:#93a1a1!important;
+	display:inline-block
+}
+
+.highlight .go
+{
+	color:#888
+}
+
+.highlight .gp
+{
+	color:#555
+}
+
+.highlight .gu
+{
+	color:#6c71c4!important
+}
+
+.highlight .kc
+{
+	color:#859900!important;
+	font-weight:700!important
+}
+
+.highlight .kp
+{
+	color:#cb4b16!important;
+	font-weight:700!important
+}
+
+.highlight .kr
+{
+	color:#d33682!important;
+	font-weight:700!important
+}
+
+.highlight .nc
+{
+	color:#d33682!important
+}
+
+.highlight .ni
+{
+	color:purple
+}
+
+.highlight .bp
+{
+	color:#999
+}
+
+.highlight .vc
+{
+	color:teal
+}
+
+.highlight .w
+{
+	color:#bbb
+}
+
+.highlight .se
+{
+	color:#dc322f!important
+}
+
+.highlight .ss
+{
+	color:#990073
+}
+
+.highlight div .gd,.highlight div .gd .x,.highlight div .gi,.highlight div .gi .x
+{
+	display:inline-block;
+	width:100%
+}
+
+.highlight .lineno
+{
+	width:20px
+}
+
+.highlight .c,.highlight .cm,.highlight .cp,.highlight .c1
+{
+	color:#586e75!important;
+	font-style:italic!important
+}
+
+.highlight .o,.highlight .gs
+{
+	color:#93a1a1!important;
+	font-weight:700!important
+}
+
+.highlight .gr,.highlight .gt
+{
+	color:#a00
+}
+
+.highlight .kd,.highlight .n,.highlight .na,.highlight .vg,.highlight .vi,.highlight .nv,.highlight .si
+{
+	color:#268bd2!important
+}
+
+.highlight .kt,.highlight .mf,.highlight .m,.highlight .mh,.highlight .mi,.highlight .s,.highlight .sd,.highlight .s2,.highlight .sr,.highlight .s1
+{
+	color:#2aa198!important
+}
+
+.highlight .nb,.highlight .nl
+{
+	color:#859900!important
+}
+
+.highlight .no,.highlight .nn,.highlight .nx
+{
+	color:#b58900!important
+}
+
+.highlight .ne,.highlight .nf,.highlight .nt
+{
+	color:#268bd2!important;
+	font-weight:700!important
+}
+
+.highlight .mo,.highlight .il
+{
+	color:#099
+}
+
+.highlight .sb,.highlight .sc,.highlight .sh,.highlight .sx
+{
+	color:#d14
+}
