--- a/_src/assets/css/syntax.css
+++ b/_src/assets/css/syntax.css
@@ -9,13 +9,15 @@ code
 
 pre code
 {
-	border:none
+	border:none;
+	padding:0;
 }
 
 pre
 {
 	background-color:#222424;
-	border:1px solid #000
+	border:1px solid #000;
+	padding: 10px 10px;
 }
 
 .highlight
