--- a/_src/_includes/head.html
+++ b/_src/_includes/head.html
@@ -3,6 +3,11 @@
         {% if site.refresh > 0%}
         <meta http-equiv="refresh" content="{{ site.refresh }}" />
         {% endif %}
+        <meta name="author" content="{{ site.author }}" />
+        <meta name="description" content="{{ site.description }}" />
+        <meta name="keywords" content="{{ site.keywords }}" />
+        <meta name="generator" content="Jekyll" />
+
         <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}</title>
 
         <link href="/assets/css/font.css" type="text/css" rel="stylesheet" /> 
