--- a/_src/_layouts/post.html
+++ b/_src/_layouts/post.html
@@ -51,7 +51,7 @@ blog: true
                             title="{{ page.title }}"
                             data-flattr-tags="text"
                             data-flattr-category="text"
-                            data-flattr-description="{{ content | truncatewords:50 }}"
+                            data-flattr-description=""
                             href="{{ site.domain }}{{ page.url }}">
                         </a>
                     </div>
