--- a/_src/assets/css/styles.css
+++ b/_src/assets/css/styles.css
@@ -211,3 +211,17 @@ blockquote p {
     font-weight: 200;
     text-align: justify;
 }
+
+img {
+    display: block;
+    margin: 10px auto;
+    max-width: 100%;
+    border: 1px solid black;
+	-webkit-box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 4px 5px rgba(0,0,0,.6), inset 0 1px 2px rgba(0,0,0,.6);
+	-moz-box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 4px 5px rgba(0,0,0,.6), inset 0 1px 2px rgba(0,0,0,.6);
+	box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 4px 5px rgba(0,0,0,.6), inset 0 1px 2px rgba(0,0,0,.6);
+
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
