--- a/_src/assets/css/styles.css
+++ b/_src/assets/css/styles.css
@@ -221,7 +221,27 @@ img {
 	-moz-box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 4px 5px rgba(0,0,0,.6), inset 0 1px 2px rgba(0,0,0,.6);
 	box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 4px 5px rgba(0,0,0,.6), inset 0 1px 2px rgba(0,0,0,.6);
 
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
+	-webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	border-radius: 7px;
+}
+
+.cutoutlogo {
+    width:100px;
+    height:100px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100px 100px;
+	-webkit-box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 4px 5px rgba(0,0,0,.6), inset 0 1px 2px rgba(0,0,0,.6);
+	-moz-box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 4px 5px rgba(0,0,0,.6), inset 0 1px 2px rgba(0,0,0,.6);
+	box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 4px 5px rgba(0,0,0,.6), inset 0 1px 2px rgba(0,0,0,.6);
+
+	-webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	border-radius: 7px;
+}
+.cutoutlogo:hover {
+    -webkit-box-shadow: 0px 0px 30px rgba(0, 180, 204, 1);
+    -moz-box-shadow:    0px 0px 30px rgba(0, 180, 204, 1);
+    box-shadow:         0px 0px 30px rgba(0, 180, 204, 1);
 }
