--- a/_src/_includes/aside.html
+++ b/_src/_includes/aside.html
@@ -1,6 +1,6 @@
         <aside>
         {% if page.nav == false %}
-            <div class="atop logo">
+            <div class="atop logo imprint">
                 &#622;
             </div>
 
