--- a/_src/_layouts/wire.html
+++ b/_src/_layouts/wire.html
@@ -7,12 +7,15 @@
         <div class="wrapper">
             <section>
             {{ content }}
+
+            {% include footer.html %}
             </section>
 
             {% include aside.html %}
+
+            <div class="bottomfade"></div>
         </div>
 
-        {% include footer.html %}
     </body>
 
 </html>
