--- a/_src/assets/css/layout.css
+++ b/_src/assets/css/layout.css
@@ -125,6 +125,13 @@ nav.front ul li:hover {
 
 /* Footer */
 footer {
+    text-align: center;
+    color: #222;
+    font-size:10pt;
+    margin-top: 100px;
+}
+
+.bottomfade {
     z-index:3;
     position:                fixed;
     bottom:                  0;
