--- a/_src/assets/css/styles.css
+++ b/_src/assets/css/styles.css
@@ -248,3 +248,6 @@ img {
     -moz-box-shadow:    0px 0px 30px rgba(0, 180, 204, 1);
     box-shadow:         0px 0px 30px rgba(0, 180, 204, 1);
 }
+footer a {
+    color: #222;
+}
