--- a/_src/_layouts/post.html
+++ b/_src/_layouts/post.html
@@ -4,9 +4,9 @@ blog: true
 ---
             <article>
                 {% if page.link %}  
-                    <header>Link: <a href="{{ page.link }}"><h1>{{ page.title }}</h1></a></header>
+                    <header><h1>Link: <a href="{{ page.link }}">{{ page.title }}</h1></a></header>
                     <div class="infotoppost">
-                        <a href="{{ site.domain }}{{ page.url }}">{{ page.date | date_to_long_string }}</a>
+                        <a style="color:gray" href="{{ site.domain }}{{ page.url }}">{{ page.date | date_to_long_string }}</a>
                         {% if page.author %}
                             by {{ page.author }}
                         {% endif %}
