--- a/_src/_includes/aside.html
+++ b/_src/_includes/aside.html
@@ -13,28 +13,27 @@
                 </nav>
 
                 {% if page.blog == true %}
-                    <div class="categories">
-                    Categories:
-                    <ul>
-                        {% comment %} Some magic for Sorted Categories {% endcomment %}                    
-                        {% capture get_items %}
-                            {% for cat in site.categories %}
-                                {{ cat | first }}
-                            {% endfor %}
-                        {% endcapture %}
-                        {% capture num_words %}
-                            {{ get_items | split:' ' | sort | join:' ' | number_of_words }}
-                        {% endcapture %}
-
-                        {% for item in (1..num_words) %}
-                            {% capture this_word %}
-                            {{ get_items | split:' ' | sort | join:' ' | truncatewords:item | remove:'...' | split:' ' | last }}
-                            {% endcapture %}
-
-                            <li><a href="/{{ site.category_dir }}/{{ this_word }}">{{ this_word }}</a></li>
+                <div class="categories">
+                Categories:
+                <ul>
+                    {% capture get_items %}
+                        {% for cat in site.categories %}
+                            {{ cat | first }}
                         {% endfor %}
-                    </ul>
-                    </div>
+                    {% endcapture %}
+                    {% capture num_words %}{{ get_items | split:' ' | sort | join:' ' | number_of_words }}{% endcapture %}
+                    {% for item in (1..num_words) %}
+                        {% capture this_word %}{{ get_items | split:' ' | sort | join:' ' | truncatewords:item | remove:'...' | split:' ' | last }}{% endcapture %}
+                        <li><a href="/{{ site.category_dir }}{{ this_word }}">{{ this_word }}</a></li>
+                    {% endfor %}
+                </ul>
+                </div>
+
+                <div class="subscribe">
+                Subscribe:
+                <ul>
+                    <li><a href="http://lc3dyr.de/feed.xml">RSS-Feed</a></li>
+                </div>
                 {% endif %}
                 <br />
                 {% comment %} <input type="search" name="search"> {% endcomment %}
