Small finetuning of Comments

--- a/_src/_includes/comments.html
+++ b/_src/_includes/comments.html
@@ -1,6 +1,7 @@
                 <div id="comments">
                     {% case page.comment_count %}
                     {% when 0 %}
+                        <a name=comments></a>
                     {% when 1 %}
                         <h3><a name=comments>1 Comment</a></h3>
                     {% else %}
