Smaller Font Size

--- a/_src/assets/css/layout.css
+++ b/_src/assets/css/layout.css
@@ -60,8 +60,7 @@ section {
 
     padding-bottom:  50px;
 
-    font-size:      12pt;
-    line-height:    16pt;
+    /* line-height:    16pt; */
     color:          silver;
 }
 
