Comment Submitbutton now a link

--- a/_src/_includes/comments.html
+++ b/_src/_includes/comments.html
@@ -45,6 +45,7 @@
                             cols="60" ></textarea><br>
                         
                         <input type="submit" 
+                            class="button deeper"
                             name="" 
                             value="Submit Comment" />
                     </form>
