--- a/_src/_includes/comments.html
+++ b/_src/_includes/comments.html
@@ -36,7 +36,9 @@
                             size="25"
                             name="name" /><label for="name">Name</label><br>
 
-                        <input type="text" size="25" name="from_email" /><label for="email">Email (will not be published)</label><br>
+                        <input type="text"
+                            size="25"
+                            name="from_email" /><label for="email">Email (will not be published)</label><br>
 
                         <textarea name="comment"
                             rows="10"
