--- a/_src/_includes/comments.html
+++ b/_src/_includes/comments.html
@@ -34,7 +34,7 @@
 
                         <input  type="text" 
                             size="25"
-                            name="name" /><label for="name">Name</label><br>
+                            name="nameasdf" /><label for="name">Name</label><br>
 
                         <input type="text"
                             size="25"
