Clear out variablename fuckup

--- a/_src/_includes/comments.html
+++ b/_src/_includes/comments.html
@@ -34,11 +34,11 @@
 
                         <input  type="text" 
                             size="25"
-                            name="nameasdf" /><label for="name">Name</label><br>
+                            name="name" /><label for="name">Name</label><br>
 
                         <input type="text"
                             size="25"
-                            name="from_email" /><label for="email">Email (will not be published)</label><br>
+                            name="email" /><label for="email">Email (will not be published)</label><br>
 
                         <textarea name="comment"
                             rows="10"
