Remove unnessesary Underscore

--- a/_src/_includes/piwik.html
+++ b/_src/_includes/piwik.html
@@ -10,4 +10,4 @@
         piwikTracker.enableLinkTracking();
     } catch( err ) {}
 </script><noscript><p><img src="http://piwik.lc3dyr.de/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-<!-- End Piwik Tracking Code -->_
+<!-- End Piwik Tracking Code -->
