Adding a 'News'-Section

--- a/_src/_includes/aside.html
+++ b/_src/_includes/aside.html
@@ -29,6 +29,14 @@
                 </ul>
                 </div>
 
+                <div class="news">
+                News:<br/>
+                <br/>
+                <span style="font-size:9pt">{% include news.html %}</span>
+                <br/>
+                <br/>
+                </div>
+
                 <div class="subscribe">
                 Subscribe:
                 <ul>
